# Slip403

./: LICENSE  README.md  example.csv  pyproject.toml
src/slip403/: config.py  core.py  main.py  output.py  utils.py
